# apple-private-apis

./: Cargo.toml  README.md
icloud-auth/: Cargo.toml
icloud-auth/rustcrypto-srp/: Cargo.toml  README.md
icloud-auth/src/: anisette.rs  client.rs  lib.rs
icloud-auth/tests/: gsa_auth.rs
omnisette/: Cargo.toml
omnisette/src/: adi_proxy.rs  anisette_headers_provider.rs  aos_kit.rs  lib.rs  remote_anisette.rs  remote_anisette_v3.rs  store_services_core.rs
omnisette/src/store_services_core/: posix_macos.rs
