[package]
name = "nab138_omnisette"
version = "0.1.3"
edition = "2021"
description = "A library to generate \"anisette\" data. Modified from Sidestore/apple-private-apis"
repository = "https://github.com/nab138/apple-private-apis"
license = "MPL-2.0"

[dependencies]
base64 = "0.22"
plist = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip"] }
rand = "0.9"
sha2 = "0.10"
uuid = { version = "1.3", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
log = "0.4"
async-trait = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.115" }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3.28" }
chrono = { version = "0.4.37" }
thiserror = "2"
anyhow = "1.0.81"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
simplelog = "0.12"
